--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,16 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    def retrofitVersion = '2.2.0'
+    def retrofitVersion = '2.0.2'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    def rxlifecycleVersion = '0.6.1'
+    implementation "com.trello:rxlifecycle-kotlin:$rxlifecycleVersion"
+    implementation "com.trello:rxlifecycle-components:$rxlifecycleVersion"
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
